--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-Gear</title>
     <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="Style/Responsive.css">
 </head>
 <body>
     <header>
-            <nav>
-                <h3 class="nav-title">Influencer products</h3>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Sing up</a></li>
-                    <li><a href="">Login</a></li>
-                    <li><a href=""><img src="icon/magnifying.svg" alt=""></a></li>
-                    <li><a href=""><img src="icon/cart.svg" alt=""></a></li>
-                </ul>
-            </nav>
-           <div class="header-container">
-            <div class="header-content">
-                <h2 class="hrader-title">Start your Journey as 
-                    Influencer</h2>
-                    <p class="header-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                    <button class="btn-1">Preebook now <img src="icon/arrow-forward 1.svg" alt=""></button>
+        <nav class="nav-container">
+            <div class="nav-title">Influencer products</div>
+            <div class="nav-icon">
+                <a href="">Home</a>
+                <a href="">Products</a>
+                <a href="">Sign Up</a>
+                <a href="">Log In</a>
+                <img src="icon/magnifying.svg" alt="">
+                <img src="icon/cart.svg" alt="">
             </div>
-            <div class="image">
+            
+        </nav>
+        <div class="header-container">
+            <div class="header-content">
+                <h2>Start your Journey as 
+                    Influencer</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="common-btn">Preebook now <img src="icon/arrow-forward 1.svg" alt=""></button>
+            </div>
+            <div class="header-img-container">
                 <img src="images/main-camera.png" alt="">
             </div>
-           </div>
-           <div class="logo">
-            <img src="logos/Alibaba.svg" alt=""><img src="logos/Amazon.svg" alt=""><img src="logos/Daraz.pk Logo.svg" alt=""><img src="logos/Ebay.svg" alt=""><img src="logos/Rakuten.svg" alt=""><img src="logos/Walmart.svg" alt=""><img src="logos/Target.svg" alt="">
-           </div>
+        </div>
     </header>
     <main>
 
