finished main section 1

--- a/index.html
+++ b/index.html
@@ -32,9 +32,158 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
+        <div class="header-name-plate">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+        </div>
     </header>
     <main>
-
+       <section class="product-section">
+        <h4 style="font-size:1.75rem; font-weight: 600; color: #3A3A3A; text-align: center;">Popular Collection</h4>
+        <div class="grid-container">
+            <div class="single-image">
+                <img src="images/tripod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/mic.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/airpod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/drone.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/lights.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/setup.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/camera.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/single-light.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="single-image">
+                <img src="images/action.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div style="display: flex; align-items: center; ">
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-solid.svg" alt=""></span>
+                    <span><img src="icon/star-regular.svg" alt=""></span>
+                    <span>4.99</span>
+                </div>
+                <p>Word-wide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            
+        </div>
+       </section>
     </main>
     <footer>
 
