added main section

--- a/index.html
+++ b/index.html
@@ -184,6 +184,17 @@
             
         </div>
        </section>
+       <section class="last-section">
+        <div class="last-image">
+            <img src="images/gear.png" alt="">
+        </div>
+        <div class="content">
+            <h2>Featured products at one place</h2>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="common-btn">Join Now <img src="icon/arrow-forward 1.svg" alt=""></button>
+        </div>
+
+       </section>
     </main>
     <footer>
 
